ingress/elastic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: elasticsearch-ingress
  namespace: elastic-stack
spec:
  rules:
  - host: elasticsearch.binesty.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port:
              number: 9200
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: apm-ingress
  namespace: elastic-stack
spec:
  rules:
  - host: apm.binesty.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apm-server
            port:
              number: 8200
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kibana-ingress
  namespace: elastic-stack
spec:
  rules:
  - host: kibana.binesty.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-service
            port:
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: rabbitmq-ingress
  namespace: rabbitmq
spec:
  rules:
  - host: rabbitmq.binesty.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-management
            port:
              number: 80
---
